<resources>
    <string name="app_name">Tretiranje voća</string>
    <string name="message_saving">Dodano je novo tretiranje!</string>
    <string name="label_sljive">Sljive</string>
    <string name="label_jabuke">Jabuke</string>
    <string name="label_kruske">Kruske</string>
    <string name="label_vinovaloza">Vinova loza</string>
    <string name="label_herbicid">Herbicid</string>
    <string name="label_fungicid">Fungicid</string>
    <string name="label_insekticid">Insekticid</string>
    <string name="label_vrsta">Vrsta, proizvodac</string>
    <string name="label_kolicina">Kolicina [g / 100l]</string>
    <string name="label_karenca">Karenca [dani]</string>
    <string name="label_napomena">Kratka napomena</string>
    <string name="label_statistika"><u>Ukupan broj tretiranja</u></string>
    <string name="label_tretiranje_voca"><u><b>Tretiranje voća</b></u></string>
    <string name="label_ukupno"><b>Ukupno:</b></string>
    <string name="label_zadnjetretiranje"><b>Posljednje:</b></string>
    <string name="label_aktivnekarence"><u>Karence</u></string>
    <string name="label_brojaktivnih"><u></u></string>
    <string name="evidentiranje_tretiranja_vo_a"><b>Evidentiranje tretiranja voća</b></string>
    <string name="label_statistikakulture">Statistika o kulturi </string>
    <string name="label_statistikasljive">Š L J I V E  </string>
    <string name="label_statistikavinova">V I N O V A  \t\tL O Z A  </string>
    <string name="label_statistikajabuka">J A B U K E </string>
    <string name="label_statistikakruske">K R U S K E </string>



    <string name="label_ukupnotretiranja"><b>Ukupno tretiranja:</b></string>
    <string name="label_fungicidom"><b>Fungicid:</b></string>
    <string name="label_herbicidom"><b>Herbicid:</b></string>
    <string name="label_aktivnekarencep"><b>Aktivne karence:</b></string>
    <string name="label_insekticidom"><b>Insekticid:</b></string>
    <string name="label_DetDatumtretiranja"><b>Datum tretiranja:</b></string>
    <string name="label_DetVrstaTretiranja"><b>Vrsta tretiranja:</b></string>
    <string name="label_DetTipProizvodac"><b>Tip, proizvođač:</b></string>
    <string name="label_DetKolicina"><b>Količina [g/100l]:</b></string>
    <string name="label_DetKarenca"><b>Karenca [dani]:</b></string>
    <string name="notificationTitleString">Aplikacija za praćenje tretiranja voća</string>
    <string name="brisanjeProvjera">Jeste li sigurni da želite obrisati tretiranje?</string>
    <string name="greske_kolicina">Molimo unesite kolicinu!</string>
    <string name="napomena_error">Napomena ne moze biti prazna!</string>
    <string name="karenca_error">Karenca ne moze biti negative!</string>
    <string name="vrsta_error">Unesite vrstu i proizvođača!</string>
    <string name="nfcobavijest1">Obavijesti o tretiranjima</string>
    <string name="nfcdescription">Ovdje se nalaze obavijesti o tretiranjima</string>
    <string name="nfcukupno">\"Ukupno tretiranja (sve kulture): \"</string>


</resources>