<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">


        <RadioGroup
            android:id="@+id/rg_odabirvoca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:buttonTintMode="multiply"
            android:gravity="center"

            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/rg_tiptretiranja"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/rb_sljive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTintMode="multiply"
                android:text="@string/label_sljive" />

            <RadioButton
                android:id="@+id/rb_jabuke"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTintMode="multiply"
                android:text="@string/label_jabuke" />

            <RadioButton
                android:id="@+id/rb_kruske"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTintMode="multiply"
                android:text="@string/label_kruske" />

            <RadioButton
                android:id="@+id/rb_vinovaloza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTintMode="multiply"
                android:text="@string/label_vinovaloza" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/rg_tiptretiranja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_odabirvoca">

            <RadioButton
                android:id="@+id/rb_herbicid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTintMode="multiply"
                android:text="@string/label_herbicid" />

            <RadioButton
                android:id="@+id/rb_fungicid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTintMode="multiply"
                android:text="@string/label_fungicid" />

            <RadioButton
                android:id="@+id/rb_insekticid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTintMode="multiply"
                android:text="@string/label_insekticid" />

        </RadioGroup>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/vrsta"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_tiptretiranja">

            <EditText


                android:id="@+id/et_vrsta"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:hint="@string/label_vrsta" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/kolicina"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vrsta">

            <EditText
                android:id="@+id/et_kolicina"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/label_kolicina"
                android:layout_marginBottom="5dp"
                android:inputType="number" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/kolicina2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/kolicina">

            <EditText
                android:id="@+id/et_kolicina2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:focusableInTouchMode="true"
                android:cursorVisible="false"
                android:focusable="false"
                android:hint="Datum tretiranja"
                />
        </com.google.android.material.textfield.TextInputLayout>




        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/karenca"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@id/kolicina2">

            <EditText
                android:id="@+id/et_karenca"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:hint="@string/label_karenca"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/napomena"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@id/karenca">


            <EditText
                android:id="@+id/et_napomena"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/label_napomena" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/b_save_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dodaj"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/napomena" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>